Set id for meow

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -16,10 +16,11 @@ jobs:
 
       - name: meow
         uses: ./.github/actions/cat-facts
+        id: cat
 
       - name: create-issue
         uses: ./.github/actions/issue-maker
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          catFact: ${{ steps.meow.outputs.fact }}
+          catFact: ${{ steps.cat.outputs.fact }}
           issueTitle: "another cat fact for you"
